add ErrorResponseDTO and refactor logic for invalid fields of bookDTO